deploy/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wipp-backend
spec:
  selector:
    matchLabels:
      app: wipp-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: wipp-backend
    spec:
      serviceAccountName: wipp-backend-sa
      containers:
        - image: labshare/wipp-backend:BACKEND_VERSION_VALUE
          name: wipp-backend
          imagePullPolicy: Always
          args: ["wipp-mongo", "27017" "WIPP_PVC_NAME_VALUE"]
          volumeMounts:
            - mountPath: /data/WIPP-plugins
              name: data
          ports:
            - containerPort: 8080
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: WIPP_PVC_NAME_VALUE
      restartPolicy: Always
