deploy/kubernetes/tensorboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wipp-tensorboard
spec:
  selector:
    matchLabels:
      app: wipp-tensorboard
  replicas: 1
  template:
    metadata:
      labels:
        app: wipp-tensorboard
    spec:
      containers:
      - image: tensorflow/tensorflow:2.0.0b1-py3
        name: wipp-tensorboard
        command: ["tensorboard"]
        args: ["--logdir=/data/WIPP-plugins/tensorboard-logs"]
        volumeMounts:
        - mountPath: /data/WIPP-plugins
          name: data
          readOnly: true
        ports:
        - containerPort: 6006
        resources: {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: WIPP_PVC_NAME_VALUE
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: wipp-tensorboard
spec:
  type: NodePort
  ports:
  - name: "6006"
    port: 6006
    targetPort: 6006
  selector:
    app: wipp-tensorboard
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: wipp-tensorboard
spec:
  rules:
  - host: TENSORBOARD_HOST_NAME_VALUE
    http:
      paths:
      - backend:
          serviceName: wipp-tensorboard
          servicePort: 6006
        path: /
